JSDOMWindow::getOwnPropertySlot should not search photo chain https://bugs.webkit.org/show_bug.cgi?id=154102

Reviewed by Chris Dumez.

Should only return *own* properties.

Source/JavaScriptCore:

* runtime/JSObject.cpp:
(JSC::JSObject::getOwnPropertyDescriptor):
    - remove hack/special-case for DOMWindow; we no longer need this.

Source/WebCore:

* bindings/js/JSDOMWindowCustom.cpp:
(WebCore::jsDOMWindowGetOwnPropertySlotNamedItemGetter):

LayoutTests:

* fast/dom/Window/es52-globals-expected.txt:
* http/tests/security/window-named-valueOf-expected.txt:
* imported/w3c/web-platform-tests/html/dom/interfaces-expected.txt:
    - update test results.



Canonical link: https://commits.webkit.org/172436@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196676 268f45cc-cd09-0410-ab3c-d52691b4dbfc